public/style/style.css
/* v2 */
*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --background-color: #fff;
    --text-color: #15162e;
    --text-color-secondary: #15162e;
    --text-color-disabled: #7b758a;

    --primary: #ffe907;
    --accent: #3564ad;
    --accent2: #FF8216;
    --error: #e52320;
    --error-transparent: #fad8d8;
    --warning: #e52320;
    --positive: #0d9a39;

    --secondary1: #0d9a39;
    --secondary2: #048637;
    --secondary3: #219653;
    --secondary4: #005127;

    --ball-color: #ffe907;
}

body {
    font-family: Segoe UI, Arial, Helvetica, sans-serif;
    background-color: var(--background-color);
    color: var(--text-color);
    margin: 0;
}

ul {
    list-style-type: none;
}

a {
    text-decoration: none;
}

input {
    border: rgb(104, 104, 104) 2px solid;
    border-radius: .3em;
}

button,
a.button {
    letter-spacing: .07em;
    display: block;
    padding: .5em 1em;
    margin: 1em auto;
    font-size: 1.3em;
    background-color: var(--primary);
    border-radius: .3em;
    border: none;
    font-weight: 800;
    color: black;
    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.562);
    cursor: pointer;
}

input#veriff-submit-btn {
    letter-spacing: .07em;
    display: block;
    padding: .5em 1em;
    margin: 1em auto;
    font-size: 1.3em;
    background-color: var(--primary);
    border-radius: .3em;
    border: none;
    font-weight: 800;
    color: black;
    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.562);
    cursor: pointer;
    width: auto;
    height: auto;
    text-transform: none;
}

p.veriff-description {
    display: none;
}

.veriff-message {
    max-width: 20em;
    display: none;
}

.veriff-message span {
    color: rgb(133, 0, 0);
    font-size: 1.2em;
    font-weight: bold;
}



body:not(.checkin)>header {
    padding: 1.5em;
    background-color: var(--secondary1);
    display: flex;
    align-items: center;
    justify-content: space-between;
}

body:not(.checkin)>header nav ul {
    display: flex;
}

body:not(.checkin)>header img {
    height: 2em
}

body:not(.checkin)>header nav ul li {
    font-weight: 600;
    margin-left: 1em;
}

body:not(.checkin)>header nav ul li a {
    position: relative;
    letter-spacing: .05em;
    color: white;
}

body:not(.checkin)>header nav ul li a::after {
    display: none;
    content: '';
    width: 1.1em;
    height: .7em;
    position: absolute;
    background-color: #fff;
    clip-path: polygon(50% 0%, 100% 100%, 0% 100%);
    left: calc(50% - .8em);
    top: 130%;
}

body:not(.checkin)>header nav ul li a:hover::after {
    display: block;
}

body:not(.checkin)>header nav ul li:first-of-type {
    margin-left: auto;
}

/* disabled state */
button.disabled,
a.disabled {
    opacity: .4;
    pointer-events: none;
    cursor: pointer;
    filter: brightness(.5);
}

/* completed button state */
a.fully_complete_button,
button.fully_complete_button {
    display: flex;
    align-items: center;
    justify-content: space-around;
    font-size: 1em;
    font-weight: 400;
    background-color: var(--positive);
}

.fully_complete_button svg {
    /* margin-left: 1em; */
    width: 1.5em;
}

/* CSS LOADER */
.loader {
    --total-width: clamp(100px, 20vw, 300px);
    --ball-width: calc(var(--total-width) / 4);
    width: var(--total-width);
    height: var(--total-width);
    position: relative;
}

.loader span {
    --animation-time: 1s;
    width: var(--ball-width);
    height: var(--ball-width);
    background-color: var(--ball-color);
    display: block;
    position: absolute;
    border-radius: 50%;
    animation: fade var(--animation-time) ease-in infinite;
    animation-delay: calc((var(--animation-time)/6) * var(--order, 0));
}

.loader span:nth-of-type(1) {
    top: 0;
    left: calc((var(--total-width) / 2) - var(--ball-width) / 2);

}

.loader span:nth-of-type(2) {
    --order: 1;
    top: 20%;
    right: 0;

}

.loader span:nth-of-type(3) {
    --order: 2;
    bottom: 20%;
    right: 0;
}

.loader span:nth-of-type(4) {
    --order: 3;
    bottom: 0;
    left: calc((var(--total-width) / 2) - var(--ball-width) / 2);
}

.loader span:nth-of-type(5) {
    --order: 4;
    bottom: 20%;
    left: 0;
}

.loader span:nth-of-type(6) {
    --order: 5;
    top: 20%;
    left: 0;
}

@keyframes fade {
    from {
        opacity: 0
    }

    to {
        opacity: 1
    }
}

/**********************/
/* LOGIN PAGE */
/**********************/

.login {
    display: grid;
    height: 100vh;
    place-items: center;
    background-color: var(--secondary1);
}

.login__form {
    background-color: white;
    border-radius: 10px;
    padding: 3em;
    box-shadow: rgba(0, 0, 0, 0.493) .5em .5em 3em;
}

.login__form label {
    font-size: 1.3em;
    display: block;
    font-weight: 700;
    margin: 1em 0em .5em 0em;
}

.login__form input {
    padding: .5em;
    font-size: 1.3em;
}

.login__error {
    display: block;
    max-width: 13em;
    color: var(--error);
}

/**********************/
/* CARS OVERVIEW PAGE */
/**********************/

.reservations h1 {
    margin: .5em
}

.reservations__cars {
    width: 100%;
}

@media screen and (min-width: 1000px) {
    .reservations__cars {
        display: grid;
        padding: 1em;
        grid-template-columns: 1fr 1fr;
        grid-gap: 2em;
    }

    .reservations__cars>li img {
        border-radius: 1em;
    }
}

.reservations__cars>li a {
    text-align: center;
}

.reservations__cars>li {
    width: 100%;
    height: 33vh;
    min-height: 20em;
    position: relative;
    color: white;
}

.reservations__cars>li img {
    filter: brightness(0.3);
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    object-fit: cover;
    object-position: center;
    position: absolute;
}

.reservations__cars>li header {
    padding: 3em;
    position: absolute;
}

/* incheck message */
.reservations__cars>li p {
    margin-top: 1em;
    font-weight: 400;
}

.reservations__cars>li strong span {
    font-weight: 700;
}
/* ... */

